# SellWise

./: .gitignore  LICENSE  README.md
.trae/rules/: project_rules.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py  enums.py  schemas.py
backend/app/routers/: __init__.py  analytics.py  file_upload.py  hot_products.py  import_.py  influencer.py  influencer_analytics.py  product_monitor.py  product_research.py
backend/app/services/: __init__.py  correlation.py  data_store.py  file_service.py  scoring.py
data-template/: generate_test_data.py  test_influencers.csv  test_influencers.xlsx  test_products.csv  test_products.xlsx  小红书达人数据模板.csv  电商数据模板.csv
docs/superpowers/plans/: 2026-04-24-sellwise-implementation.md
docs/superpowers/specs/: 2026-04-24-sellwise-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/influencer-analytics/: page.tsx
frontend/src/app/product-research/: page.tsx
frontend/src/components/: FileUploadModal.tsx  Header.tsx  Sidebar.tsx
frontend/src/router/: index.js
frontend/src/styles/: index.css
frontend/src/views/: HotProducts.vue  Import.vue  Influencer.vue  Layout.vue  ProductMonitor.vue
